# Plot_Vmaf

./: .gitignore  README.md  generate_vmaf.sh  plot_vmaf.py  pyproject.toml
src/vmaf_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/vmaftools/: __init__.py  cli.py
src/vmaftools/scripts/: generate_vmaf.sh
