[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vmaf-tools"
version = "0.1.0"
description = "Tools for VMAF video quality analysis"
readme = "README.md"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "matplotlib",
]

[project.scripts]
vmaf-plot = "vmaftools.cli:main"
generate-vmaf = "vmaftools.cli:generate_vmaf"

[tool.setuptools]
package-dir = {"" = "src"} 